# libnetconf2

./: CMakeLists.txt  README.md
fuzz/: CMakeLists.txt  config.h.in  rpcsendfuzz.c
python/: netconf.c  rpc.c
python/examples/: run.py  yang_runtime.py
